Fix for horizontal scrolling body

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ html, body {
   padding: 0;
   margin: 0;
   font-family: 'Titillium Web', sans-serif;
+  overflow: hidden;
 }
 
 body {
